Oxford talk nearly done

--- a/2019/25-02-CSE-solvers.tex
+++ b/2019/25-02-CSE-solvers.tex
@@ -294,7 +294,7 @@ backend=biber]{biblatex}
       \begin{block}{Mesh}
         \begin{center}
           \begin{tikzpicture}
-            \input{\jobname.figures/tet_simple.tex}
+            \input{../pictures/tet_simple.tex}
           \end{tikzpicture}
         \end{center}
       \end{block}
@@ -304,14 +304,14 @@ backend=biber]{biblatex}
         \begin{onlyenv}<1>
           \begin{center}
             \begin{tikzpicture}
-              \input{\jobname.figures/tet_graph.tex}
+              \input{../pictures/tet_graph.tex}
             \end{tikzpicture}
           \end{center}
         \end{onlyenv}
         \begin{onlyenv}<2>
           \begin{center}
             \begin{tikzpicture}
-              \input{\jobname.figures/tet_graph.tex}
+              \input{../pictures/tet_graph.tex}
               \begin{scope}[overlay, remember picture, rounded corners]
                 \filldraw[fill opacity=0.2]
                 ([xshift= 3pt, yshift=-3pt] 7.south east) --
@@ -328,7 +328,7 @@ backend=biber]{biblatex}
         \begin{onlyenv}<3>
           \begin{center}
             \begin{tikzpicture}
-              \input{\jobname.figures/tet_graph.tex}
+              \input{../pictures/tet_graph.tex}
               \begin{scope}[overlay, remember picture, rounded corners]
                 \filldraw[fill opacity=0.2]
                 ([xshift= 1pt, yshift=-3pt] 1.south east) --
@@ -350,7 +350,7 @@ backend=biber]{biblatex}
         \begin{onlyenv}<4>
           \begin{center}
             \begin{tikzpicture}
-              \input{\jobname.figures/tet_graph.tex}
+              \input{../pictures/tet_graph.tex}
               \begin{scope}[overlay, remember picture, rounded corners]
                 \filldraw[fill opacity=0.2]
                 ([xshift= 3pt, yshift=-3pt] 10.south east) --
@@ -367,7 +367,7 @@ backend=biber]{biblatex}
         \begin{onlyenv}<5>
           \begin{center}
             \begin{tikzpicture}
-              \input{\jobname.figures/tet_graph.tex} 
+              \input{../pictures/tet_graph.tex} 
               \begin{scope}[overlay, remember picture, rounded corners]
                 \filldraw[fill opacity=0.2]
                 ([xshift= 0pt, yshift= 3pt] 14.north west) --
