--- a/2019/07-03-oxford-computational-maths.tex
+++ b/2019/07-03-oxford-computational-maths.tex
@@ -3,6 +3,7 @@
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
 
+\usepackage{booktabs}
 \titlegraphic{\hfill\includegraphics[height=1.25cm]{durham-logo}}
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
@@ -50,6 +51,7 @@ backend=biber]{biblatex}
 \DeclareMathOperator{\div}{div}
 \DeclareMathOperator{\curl}{curl}
 \DeclareMathOperator{\range}{range}
+\DeclareMathOperator{\sym}{sym}
 \usetheme{metropolis}
 \setbeamertemplate{title graphic}{
   \vbox to 0pt {
@@ -336,7 +338,7 @@ while t < ...:
 
 
 \begin{frame}[standout]
-  What about the solvers?
+  What about solvers?
 \end{frame}
 
 \begin{frame}[t]
@@ -708,9 +710,9 @@ class OKPC(PCBase):
   \frametitle{Some motivating problems: multigrid smoothers}
   \begin{onlyenv}<1>
     \begin{block}{Coupled multigrid for Stokes/Navier--Stokes}
-      In the SCGS scheme four velocites and one pressure
+      \emph{In the SCGS scheme four velocites and one pressure
       corresponding to one finite difference node are simultaneously
-      updated by inverting a (small) matrix of equatioins.
+      updated by inverting a (small) matrix of equations.}
 
       \begin{center}
         \includegraphics[height=3cm]{vanka}
@@ -722,9 +724,9 @@ class OKPC(PCBase):
   \end{onlyenv}
   \begin{onlyenv}<2>
     \begin{block}{$p$-independent preconditioners for elliptic problems}
-      [Each subspace is generated from]
+      \emph{[Each subspace is generated from]
       $V_i^p = V^p \cap H^1_0(\Omega_i^{'})$ where $\Omega_i^{'}$ is the open square
-      centered at the ith vertex
+      centered at the ith vertex}
       \begin{center}
         \includegraphics[width=3cm]{pavarino}
       \end{center}
@@ -736,9 +738,9 @@ class OKPC(PCBase):
 
   \begin{onlyenv}<3>
     \begin{block}{Multigrid for nearly incompressible elasticity}
-      The suggested smoother is block Jacobi smoother, which takes
+      \emph{The suggested smoother is block Jacobi smoother, which takes
       care of the kernel [...]. These kernel basis functions are
-      captured by subspaces $V_{l,i}$ as shown
+      captured by subspaces $V_{l,i}$ as shown}
       \begin{center}
         \includegraphics[height=3cm]{schoeberl}
       \end{center}
@@ -750,9 +752,9 @@ class OKPC(PCBase):
 
   \begin{onlyenv}<4>
     \begin{block}{Multigrid in $H(\div)$ and $H(\curl)$}
-      To define the Schwarz smoothers, we can use a decomposition of
+      \emph{To define the Schwarz smoothers, we can use a decomposition of
       $V_h$ into local patches consisting of all elements surrounding
-      either an edge or a vertex.
+      either an edge or a vertex.}
 
       \begin{center}
         \includegraphics[height=2.5cm]{arnold}
@@ -765,10 +767,10 @@ class OKPC(PCBase):
 
   \begin{onlyenv}<5>
     \begin{block}{An augmented Lagrangian approach to the Oseen problem}
-      We use a block Gauss-Seidel method [...] based on the
+      \emph{We use a block Gauss-Seidel method [...] based on the
       decomposition $V_h = \sum_{i=0}^l V_i$ [...For] P2-P0 finite
       elements the natural choice is to gather nodel DOFs for velocity
-      inside ovals [around a vertex]
+      inside ovals [around a vertex]}
 
       \begin{center}
         \includegraphics[height=2.5cm]{benzi}
@@ -948,28 +950,10 @@ class OKPC(PCBase):
    \end{enumerate}
  \end{block}
  \begin{block}{User-defined}
-   Callback provides \texttt{IS}es for each patch, plus iteration order.
-\begin{minted}[fontsize=\scriptsize]{c}
- PetscErrorCode UserPatches(PC, PetscInt *npatch, IS **patches,
-                            IS *order, void *ctx);
-\end{minted}
+   Callback provides list of entities in each patch, plus iteration order.
  \end{block}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Connect to dofs via \texttt{PetscSection}}
-  \begin{itemize}
-  \item Each patch defined by set of mesh points $\{p_i\}$
-  \item Inspect \texttt{PetscSection} defining the function space
-    layout to obtain global dof numbers
-  \item These are the dofs we will solve for
-  \item Create local renumbering on each patch (for local operator)
-  \item Build scatters from global to patch vectors
-  \item Finally, \emph{complete} patch using appropriate adjacency
-    relationship (this pulls in dofs we need to see, but will not
-    solve for)
-  \end{itemize}
-\end{frame}
 \begin{frame}[fragile,t]
   \frametitle{Patch assembly}
   \begin{itemize}
@@ -980,35 +964,20 @@ class OKPC(PCBase):
   \item Extends to nonlinear smoothers
   \end{itemize}
 
-  \begin{onlyenv}<1>
-    \begin{block}{Callbacks}
-\begin{minted}[fontsize=\scriptsize]{c}
- /* Patch Jacobian */
- UserComputeOp(PC, PetscInt point, Vec state, Mat op, IS cells,
-               PetscInt n, PetscInt *dofmap, void *ctx);
- /* Patch Residual */
- UserComputeF(PC, PetscInt point, Vec state, Vec f, IS cells,
-              PetscInt n, PetscInt *dofmapWithBcs, PetscInt *dofmap,
-              void *ctx);
-\end{minted}
-    \end{block}
-  \end{onlyenv}
-  \begin{onlyenv}<2>
-    \begin{block}{PDE library support}
-      \begin{itemize}
-      \item Works if you use \texttt{DMPlex} + \texttt{PetscDS}
+  \begin{block}{PDE library support}
+    \begin{itemize}
+    \item Works if you use \texttt{DMPlex} + \texttt{PetscDS}
 \begin{minted}[fontsize=\scriptsize]{sh}
 -pc_type patch
 \end{minted}
-      \item Works in Firedrake
+    \item Works in Firedrake
 \begin{minted}[fontsize=\scriptsize]{sh}
 -pc_type python -pc_python_type firedrake.PatchPC
 # Also
 -snes_type python -snes_python_type firedrake.PatchSNES
 \end{minted}
-      \end{itemize}
-    \end{block}
-  \end{onlyenv}
+    \end{itemize}
+  \end{block}
 \end{frame}
 
 \section{Examples}
@@ -1037,7 +1006,8 @@ class OKPC(PCBase):
   \end{theorem}
   \begin{onlyenv}<2>
     \begin{corollary}
-      ``All'' we need to do is find a basis for the kernel.
+      ``All'' we need to do is characterise the kernel: in particular
+      the support of the basis.
 
       Appropriate discrete de Rham complexes can help.
     \end{corollary}
@@ -1051,21 +1021,22 @@ class OKPC(PCBase):
     \text{Find $u \in V \subset H^1$ s.t.} \quad (\grad u, \grad v) + \gamma (\div u, \div v) = (f, v) \quad \forall v \in V.
   \end{equation*}
   \vspace*{-\baselineskip}
-  \begin{block}{Stokes complex}
-    \begin{equation*}
-      \mathbb{R} \xrightarrow{\operatorname{id}} H^2 \xrightarrow{\grad} H^1(\curl)
-      \xrightarrow{\curl} H^1 \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
-    \end{equation*}
-    Decomposition must span $\ker \div = \range \curl$.
 
-    Appropriate discrete spaces are constructed in \textcite{Neilan:2015a}: use
-    star patch around vertices (with piecewise continuous space for
-    $H^1$ of sufficiently high degree).
-  \end{block}
-  \begin{onlyenv}<1-3>
-    \begin{columns}
-      \begin{column}{0.6\textwidth}
-        \begin{onlyenv}<1>
+  \begin{onlyenv}<1-4>
+    \begin{block}{Stokes complex (2D)}
+      \begin{equation*}
+        \mathbb{R} \xrightarrow{\operatorname{id}} H^2
+        \xrightarrow{\grad^\perp} H^1 \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
+      \end{equation*}
+      Decomposition must span $\ker \div = \range \grad^\perp$.
+
+      Appropriate discrete spaces are developed in \textcite{Morgan:1975}: use
+      star patch around vertices.
+    \end{block}
+    \begin{onlyenv}<1-3>
+      \begin{columns}[T]
+        \begin{column}{0.6\textwidth}
+          \begin{onlyenv}<1>
 \begin{minted}[fontsize=\scriptsize]{python}
 -ksp_type cg
 -pc_type mg
@@ -1076,8 +1047,8 @@ class OKPC(PCBase):
 
 
 \end{minted}
-        \end{onlyenv}
-        \begin{onlyenv}<2>
+          \end{onlyenv}
+          \begin{onlyenv}<2>
 \begin{minted}[fontsize=\scriptsize]{python}
 -ksp_type cg
 -pc_type mg
@@ -1088,8 +1059,8 @@ class OKPC(PCBase):
       -pc_patch_construct_dim 0
 
 \end{minted}
-        \end{onlyenv}
-        \begin{onlyenv}<3>
+          \end{onlyenv}
+          \begin{onlyenv}<3>
 \begin{minted}[fontsize=\scriptsize]{python}
 -ksp_type cg
 -pc_type mg
@@ -1100,96 +1071,133 @@ class OKPC(PCBase):
       -pc_patch_construct_dim 0
       -pc_patch_construct_type star
 \end{minted}
-        \end{onlyenv}
-      \end{column}
-      \begin{column}{0.4\textwidth}
-        \begin{center}
-          \begin{tikzpicture}[scale=4]
-            \tikzstyle{v}=[circle, fill, minimum size=0pt, inner sep=0pt]
-            \tikzstyle{c}=[diamond, fill, minimum size=4pt, inner sep=0pt]
-            \tikzstyle{e}=[rectangle, fill, minimum size=3pt, inner sep=0pt]
-            \tikzstyle{select}=[draw, minimum size=3pt]
-            \foreach \i/\k in {0/0, 0.25/1, 0.5/2, 0.75/3} {
-              \foreach \j/\l in {0/0, 0.25/1, 0.5/2, 0.75/3} {
-                \node[v] (v\k\l) at (\i, \j) {};
+          \end{onlyenv}
+        \end{column}
+        \begin{column}{0.4\textwidth}
+          \begin{center}
+            \begin{tikzpicture}[scale=4]
+              \tikzstyle{v}=[circle, fill, minimum size=0pt, inner sep=0pt]
+              \tikzstyle{c}=[diamond, fill, minimum size=4pt, inner sep=0pt]
+              \tikzstyle{e}=[rectangle, fill, minimum size=3pt, inner sep=0pt]
+              \tikzstyle{select}=[draw, minimum size=3pt]
+              \foreach \i/\k in {0/0, 0.25/1, 0.5/2, 0.75/3} {
+                \foreach \j/\l in {0/0, 0.25/1, 0.5/2, 0.75/3} {
+                  \node[v] (v\k\l) at (\i, \j) {};
+                }
               }
-            }
 
-            \foreach \i in {0, 0.25, 0.5, 0.75} {
-              \foreach \j/\k in {0/0.25, 0.25/0.5, 0.5/0.75} {
-                \draw[thin, gray] (\i, \j) -- (\i, \k);
-                \draw[thin, gray] (\j, \i) -- (\k, \i);
+              \foreach \i in {0, 0.25, 0.5, 0.75} {
+                \foreach \j/\k in {0/0.25, 0.25/0.5, 0.5/0.75} {
+                  \draw[thin, gray] (\i, \j) -- (\i, \k);
+                  \draw[thin, gray] (\j, \i) -- (\k, \i);
+                }
               }
-            }
-            \foreach \i/\j in {0/0.25, 0.25/0.5, 0.5/0.75} {
-              \foreach \k/\l in {0/0.25, 0.25/0.5, 0.5/0.75} {
-                \draw[thin, gray] (\i, \l) -- (\j, \k);
+              \foreach \i/\j in {0/0.25, 0.25/0.5, 0.5/0.75} {
+                \foreach \k/\l in {0/0.25, 0.25/0.5, 0.5/0.75} {
+                  \draw[thin, gray] (\i, \l) -- (\j, \k);
+                }
               }
-            }
 
-            \uncover<2-3>{
-              \node[v, select] at (v11) {};
-              \node[v, select] at (v21) {};
-              \node[v, select] at (v12) {};
-              \node[v, select] at (v22) {};
-            }
-            \foreach \a/\b in {0/1, 1/2, 2/3} {
-              \foreach \c/\d in {1/0, 2/1, 3/2} {
-                \node (c\a\c-\b\c-\b\d) at (barycentric cs:v\a\c=1,v\b\c=1,v\b\d=1) {};
-                \node (c\a\d-\b\d-\a\c) at (barycentric cs:v\a\d=1,v\b\d=1,v\a\c=1) {};
+              \uncover<2-3>{
+                \node[v, select] at (v11) {};
+                \node[v, select] at (v21) {};
+                \node[v, select] at (v12) {};
+                \node[v, select] at (v22) {};
               }
-            }
+              \foreach \a/\b in {0/1, 1/2, 2/3} {
+                \foreach \c/\d in {1/0, 2/1, 3/2} {
+                  \node (c\a\c-\b\c-\b\d) at (barycentric cs:v\a\c=1,v\b\c=1,v\b\d=1) {};
+                  \node (c\a\d-\b\d-\a\c) at (barycentric cs:v\a\d=1,v\b\d=1,v\a\c=1) {};
+                }
+              }
 
-            \uncover<3>{
-              \draw[thick] \convexpath{
-                c02-12-11,
-                c11-21-12,
-                c11-21-20,
-                c10-20-11,
-                c01-11-10,
-                c01-11-02}{1pt};
-              \draw[thick] \convexpath{
-                c12-22-21,
-                c21-31-22,
-                c21-31-30,
-                c20-30-21,
-                c11-21-20,
-                c11-21-12}{1pt};
-              \draw[thick] \convexpath{
-                c03-13-12,
-                c12-22-13,
-                c12-22-21,
-                c11-21-12,
-                c02-12-11,
-                c02-12-03}{1pt};
-              \draw[thick] \convexpath{
-                c13-23-22,
-                c22-32-23,
-                c22-32-31,
-                c21-31-22,
-                c12-22-21,
-                c12-22-13}{1pt};
-            }
-          \end{tikzpicture}
-        \end{center}
-      \end{column}
-    \end{columns}
+              \uncover<3>{
+                \draw[thick] \convexpath{
+                  c02-12-11,
+                  c11-21-12,
+                  c11-21-20,
+                  c10-20-11,
+                  c01-11-10,
+                  c01-11-02}{1pt};
+                \draw[thick] \convexpath{
+                  c12-22-21,
+                  c21-31-22,
+                  c21-31-30,
+                  c20-30-21,
+                  c11-21-20,
+                  c11-21-12}{1pt};
+                \draw[thick] \convexpath{
+                  c03-13-12,
+                  c12-22-13,
+                  c12-22-21,
+                  c11-21-12,
+                  c02-12-11,
+                  c02-12-03}{1pt};
+                \draw[thick] \convexpath{
+                  c13-23-22,
+                  c22-32-23,
+                  c22-32-31,
+                  c21-31-22,
+                  c12-22-21,
+                  c12-22-13}{1pt};
+              }
+            \end{tikzpicture}
+          \end{center}
+        \end{column}
+      \end{columns}
+    \end{onlyenv}
+    \begin{onlyenv}<4>
+      \begin{table}
+        \centering
+        {\footnotesize
+          \begin{table}[htbp]
+            \centering
+            \begin{tabular}{l|cccccc}
+              $k\backslash \gamma$ & $10^0$ & $10^1$ & $10^2$ & $10^3$ & $10^4$ & $10^5$ \\
+              \toprule
+              2                    & 11     & 17     & 35     & 54     & 89     & 100    \\
+              3                    & 10     & 13     & 23     & 49
+                                                                       & 62     & 82     \\
+              \midrule
+              4                    & 9      & 10     & 13     & 13     & 13     & 12     \\
+              5                    & 9      & 10     & 11     & 12     & 11     & 10     \\
+            \end{tabular}
+            \caption{Convergence in 2D with vertex star patch smoother
+            for $P_k$ elements}
+          \end{table}
+        }
+      \end{table}
+    \end{onlyenv}
   \end{onlyenv}
-  \begin{onlyenv}<4>
+  \begin{onlyenv}<5>
+      \begin{block}{Stokes complex (3D)}
+        \begin{equation*}
+          \mathbb{R} \xrightarrow{\operatorname{id}} H^2
+          \xrightarrow{\grad} H^1(\curl) \xrightarrow{\curl} H^1 \xrightarrow{\div} L^2 \xrightarrow{\operatorname{null}} 0,
+        \end{equation*}
+        Decomposition must span $\ker \div = \range \curl$.
+
+        Appropriate discrete spaces are developed in \textcite{Neilan:2015}: use
+        star patch around vertices.
+      \end{block}
     \begin{table}
       \centering
       {\footnotesize
       \begin{tabular}{l|cccccc}
         $k\backslash \gamma$ & $10^0$ & $10^1$ & $10^2$ & $10^3$ & $10^4$ & $10^5$ \\
-        \hline
+        \toprule
         3                    & 11     & 16     & 29     & 66     & 173    & 458    \\
-        4                    & 11     & 13     & 19     & 26     & 54     & 110    \\
+        4                    & 11     & 13     & 19     & 26     & 54
+                                                                          & 110    \\
+        \midrule
         5                    & 11     & 12     & 16     & 19     & 20     & 19     \\
-        6                    & 10     & 11     & 14     & 15     & 16     & 15     \\
+        6                    & 10     & 11     & 14     & 15     & 16
+                                                                          & 15     \\
+        \midrule
         7                    & 10     & 11     & 13     & 14     & 14     & 13     \\
       \end{tabular}
-      \caption{Convergence with vertex star patch preconditioned Richardson
-        smoothers and $P_k$ Lagrange elements}
+      \caption{Convergence in 3D with vertex star patch smoother for
+        $P_k$ elements}
       }
     \end{table}
   \end{onlyenv}
@@ -1210,10 +1218,10 @@ class OKPC(PCBase):
     Decomposition must span $\ker \div = \range \curl$.
 
     Choose $V$ to be a Raviart-Thomas space, the matching $H(\curl)$
-    space has dofs on edges: use star patch around edges.
+    space has dofs on edges: use star patch around edges (or vertices).
   \end{block}
   \begin{onlyenv}<1-3>
-    \begin{columns}
+    \begin{columns}[T]
       \begin{column}{0.6\textwidth}
         \begin{onlyenv}<1>
 \begin{minted}[fontsize=\scriptsize]{python}
@@ -1327,14 +1335,15 @@ class OKPC(PCBase):
       {\footnotesize
       \begin{tabular}{l|cccccc}
         $k\backslash \gamma$ & $10^0$ & $10^1$ & $10^2$ & $10^3$ & $10^4$ & $10^5$ \\
-        \hline
-        1 (vertex)           & 11     & 11     & 11     & 11     & 11     & 11     \\
-        2 (vertex)           & 7      & 7      & 7      & 7      & 7      & 7      \\
+        \toprule
         1 (edge)             & 32     & 32     & 32     & 32     & 32     & 32     \\
         2 (edge)             & 15     & 15     & 15     & 15     & 15     & 15     \\
+        \midrule
+        1 (vertex)           & 11     & 11     & 11     & 11     & 11     & 11     \\
+        2 (vertex)           & 7      & 7      & 7      & 7      & 7
       \end{tabular}
-      \caption{Convergence with vertex and edge star patch preconditioned Richardson
-        smoothers and $\text{RT}_k$ elements}
+      \caption{Convergence in 3D with vertex and edge star patch
+        smoothers for $\text{RT}_k$ elements}
       }
     \end{table}
   \end{onlyenv}
@@ -1357,8 +1366,9 @@ class OKPC(PCBase):
     Choose $V$ to be a N\'ed\'elec space, the matching $H^1$
     space has dofs at vertices: use star patch around vertices.
   \end{block}
+  \begin{overlayarea}{\textwidth}{0.5\textheight}
   \begin{onlyenv}<1-3>
-    \begin{columns}
+    \begin{columns}[T]
       \begin{column}{0.6\textwidth}
         \begin{onlyenv}<1>
 \begin{minted}[fontsize=\scriptsize]{python}
@@ -1485,6 +1495,7 @@ class OKPC(PCBase):
       }
     \end{table}
   \end{onlyenv}
+  \end{overlayarea}
 \end{frame}
 
 \begin{frame}[fragile, t]
@@ -1503,10 +1514,12 @@ class OKPC(PCBase):
     \only<4-7>{Taylor-Hood: loop over vertices, gather closure of star}
     \nocite{Vanka:1986}
   \end{block}
+  \begin{overlayarea}{\textwidth}{0.52\textheight}
   \begin{onlyenv}<1-6>
-    \begin{columns}
+    \begin{columns}[T]
       \begin{column}{0.4\textwidth}
         \begin{onlyenv}<1-3>
+          \vspace{-0.5em}
           \begin{center}
             \begin{tikzpicture}[scale=4]
               \tikzstyle{v}=[circle, fill, minimum size=0pt, inner sep=0pt]
@@ -1546,10 +1559,15 @@ class OKPC(PCBase):
                 \draw[thick] \convexpath{v12,v21,v11}{1pt};
                 \draw[thick] \convexpath{v12,v22,v21}{1pt};
               }
+              \phantom{
+                \draw[thick] \convexpath{v03,v13,v22,v21,v11,v02}{1pt};
+                \draw[thick] \convexpath{v12,v22,v31,v30,v20,v11}{1pt};
+              }
             \end{tikzpicture}
           \end{center}
         \end{onlyenv}
         \begin{onlyenv}<4-6>
+          \vspace{-0.5em}
           \begin{center}
             \begin{tikzpicture}[scale=4]
               \tikzstyle{v}=[circle, fill, minimum size=0pt, inner sep=0pt]
@@ -1586,6 +1604,11 @@ class OKPC(PCBase):
               \uncover<6>{
                 \draw[thick] \convexpath{v03,v13,v22,v21,v11,v02}{1pt};
                 \draw[thick] \convexpath{v12,v22,v31,v30,v20,v11}{1pt};
+              }
+              \phantom{
+                \draw[thick] \convexpath{v02,v12,v11}{1pt};
+                \draw[thick] \convexpath{v12,v21,v11}{1pt};
+                \draw[thick] \convexpath{v12,v22,v21}{1pt};
               }
             \end{tikzpicture}
           \end{center}
@@ -1690,6 +1713,7 @@ class OKPC(PCBase):
       \end{column}
     \end{columns}
   \end{onlyenv}
+  \end{overlayarea}
 \end{frame}
 
 \begin{frame}[fragile,t]
@@ -1710,7 +1734,14 @@ class OKPC(PCBase):
     barycentrically refined meshes, piecewise continuous space with $k
     \ge d$, ``macro star'' patch around vertices.
   \end{block}
-  \begin{columns}
+  \begin{overlayarea}{\textwidth}{0.4\textheight}
+    \begin{onlyenv}<1>
+      \begin{center}
+        \includegraphics[height=0.4\textheight]{mh_bary_5}
+      \end{center}
+    \end{onlyenv}
+    \begin{onlyenv}<2->
+  \begin{columns}[T]
     \begin{column}{0.6\textwidth}
 \begin{minted}[fontsize=\scriptsize]{python}
 -ksp_type fgmres
@@ -1725,9 +1756,14 @@ class OKPC(PCBase):
 \end{minted}
     \end{column}
     \begin{column}{0.4\textwidth}
-      Florian figure here
+      \vspace{-1.5em}
+      \begin{center}
+        \includegraphics[height=0.4\textheight]{macrostar}
+      \end{center}
     \end{column}
   \end{columns}
+    \end{onlyenv}
+  \end{overlayarea}
 \end{frame}
 
 \begin{frame}
@@ -1741,8 +1777,6 @@ class OKPC(PCBase):
   \item With topological decompositions in hand, can provide a
     \emph{generic} interface, encompassing many useful smoothing schemes
   \end{itemize}
-
-  \pause
 
   \begin{center}
     Thanks!
